// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`meridian set > undefined matches its snapshot 1`] = `
<svg
  aria-label="White king"
  height="100%"
  role="img"
  viewBox="0 0 45 45"
  width="100%"
>
  <g
    fill="var(--piece-white-fill, #FFFFFF)"
    stroke="var(--piece-white-stroke, #2A2A2A)"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.5"
  >
    <path
      d="M 21.3 2 L 23.7 2 L 23.7 4.6 L 26.3 4.6 L 26.3 7 L 23.7 7 L 23.7 10.4 L 21.3 10.4 L 21.3 7 L 18.7 7 L 18.7 4.6 L 21.3 4.6 Z"
    />
    <path
      d="M 22.5 10.4 C 26.2 11.4 28.8 13.6 29.4 16.4 L 15.6 16.4 C 16.2 13.6 18.8 11.4 22.5 10.4 Z"
    />
    <path
      d="M 14.4 16.4 L 30.6 16.4 L 29.6 19.8 L 15.4 19.8 Z"
    />
    <path
      d="M 16.6 19.8 C 16.6 25 11.6 28.8 10.6 33 L 34.4 33 C 33.4 28.8 28.4 25 28.4 19.8 Z"
    />
    <path
      d="M 11 33 L 34 33 C 35 33 35.5 34 35.5 35 L 35.5 38.5 C 35.5 39.3 34.8 40 34 40 L 11 40 C 10.2 40 9.5 39.3 9.5 38.5 L 9.5 35 C 9.5 34 10 33 11 33 Z"
    />
  </g>
</svg>
`;

exports[`meridian set > undefined matches its snapshot 2`] = `
<svg
  aria-label="White queen"
  height="100%"
  role="img"
  viewBox="0 0 45 45"
  width="100%"
>
  <g
    fill="var(--piece-white-fill, #FFFFFF)"
    stroke="var(--piece-white-stroke, #2A2A2A)"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.5"
  >
    <path
      d="M 12.6 8.2 C 12.6 7.3 13.3 6.6 14.2 6.6 C 15.1 6.6 15.8 7.3 15.8 8.2 C 15.8 9.1 15.1 9.8 14.2 9.8 C 13.3 9.8 12.6 9.1 12.6 8.2 Z"
    />
    <path
      d="M 16.7 6.6 C 16.7 5.7 17.4 5 18.3 5 C 19.2 5 19.9 5.7 19.9 6.6 C 19.9 7.5 19.2 8.2 18.3 8.2 C 17.4 8.2 16.7 7.5 16.7 6.6 Z"
    />
    <path
      d="M 20.9 5.6 C 20.9 4.7 21.6 4 22.5 4 C 23.4 4 24.1 4.7 24.1 5.6 C 24.1 6.5 23.4 7.2 22.5 7.2 C 21.6 7.2 20.9 6.5 20.9 5.6 Z"
    />
    <path
      d="M 25.1 6.6 C 25.1 5.7 25.8 5 26.7 5 C 27.6 5 28.3 5.7 28.3 6.6 C 28.3 7.5 27.6 8.2 26.7 8.2 C 25.8 8.2 25.1 7.5 25.1 6.6 Z"
    />
    <path
      d="M 29.2 8.2 C 29.2 7.3 29.9 6.6 30.8 6.6 C 31.7 6.6 32.4 7.3 32.4 8.2 C 32.4 9.1 31.7 9.8 30.8 9.8 C 29.9 9.8 29.2 9.1 29.2 8.2 Z"
    />
    <path
      d="M 14.2 9.8 L 16.4 18.4 L 18.3 8.2 L 20.6 18.4 L 22.5 7.2 L 24.4 18.4 L 26.7 8.2 L 28.6 18.4 L 30.8 9.8 L 33.5 18.4 L 11.5 18.4 Z"
    />
    <path
      d="M 11.5 18.4 L 33.5 18.4 L 32.4 21.6 L 12.6 21.6 Z"
    />
    <path
      d="M 14 21.6 C 14 26 11.6 29.2 10.6 33 L 34.4 33 C 33.4 29.2 31 26 31 21.6 Z"
    />
    <path
      d="M 11 33 L 34 33 C 35 33 35.5 34 35.5 35 L 35.5 38.5 C 35.5 39.3 34.8 40 34 40 L 11 40 C 10.2 40 9.5 39.3 9.5 38.5 L 9.5 35 C 9.5 34 10 33 11 33 Z"
    />
  </g>
</svg>
`;

exports[`meridian set > undefined matches its snapshot 3`] = `
<svg
  aria-label="White rook"
  height="100%"
  role="img"
  viewBox="0 0 45 45"
  width="100%"
>
  <g
    fill="var(--piece-white-fill, #FFFFFF)"
    stroke="var(--piece-white-stroke, #2A2A2A)"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.5"
  >
    <path
      d="M 11.5 12 L 16.5 12 L 16.5 15.2 L 20 15.2 L 20 12 L 25 12 L 25 15.2 L 28.5 15.2 L 28.5 12 L 33.5 12 L 33.5 19 L 30.6 21.4 L 30.6 30.6 L 33.5 33 L 34.5 40 L 10.5 40 L 11.5 33 L 14.4 30.6 L 14.4 21.4 L 11.5 19 Z"
    />
    <g
      fill="none"
    >
      <path
        d="M 11.5 19 L 33.5 19"
      />
      <path
        d="M 14.4 21.4 L 30.6 21.4"
      />
      <path
        d="M 14.4 30.6 L 30.6 30.6"
      />
      <path
        d="M 11.5 33 L 33.5 33"
      />
    </g>
  </g>
</svg>
`;

exports[`meridian set > undefined matches its snapshot 4`] = `
<svg
  aria-label="White bishop"
  height="100%"
  role="img"
  viewBox="0 0 45 45"
  width="100%"
>
  <g
    fill="var(--piece-white-fill, #FFFFFF)"
    stroke="var(--piece-white-stroke, #2A2A2A)"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.5"
  >
    <path
      d="M 22.5 7 a 1.7 1.7 0 1 0 0 3.4 a 1.7 1.7 0 1 0 0 -3.4 z"
    />
    <path
      d="M 22.5 10.4 C 26.6 12.6 28.9 17.4 28.6 22 L 16.4 22 C 16.1 17.4 18.4 12.6 22.5 10.4 Z"
    />
    <path
      d="M 15.6 22 L 29.4 22 L 28.7 24.6 L 16.3 24.6 Z"
    />
    <path
      d="M 18 24.6 C 18 28 15.8 30 14.6 33 L 30.4 33 C 29.2 30 27 28 27 24.6 Z"
    />
    <path
      d="M 13 33 L 32 33 C 33 33 33.5 34 33.5 35 L 33.5 38.5 C 33.5 39.3 32.8 40 32 40 L 13 40 C 12.2 40 11.5 39.3 11.5 38.5 L 11.5 35 C 11.5 34 12 33 13 33 Z"
    />
    <path
      d="M 20 13.8 L 25 18.8"
      fill="none"
    />
  </g>
</svg>
`;

exports[`meridian set > undefined matches its snapshot 5`] = `
<svg
  aria-label="White knight"
  height="100%"
  role="img"
  viewBox="0 0 45 45"
  width="100%"
>
  <g
    fill="var(--piece-white-fill, #FFFFFF)"
    stroke="var(--piece-white-stroke, #2A2A2A)"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.5"
  >
    <path
      d="M 15 34 C 14.2 30.6 14.2 27.8 16.4 24.6 L 13 24.8 L 11.3 23.8 L 11.5 20.6 L 15.2 19.6 L 17.6 18.6 L 19.6 16.2 L 20.4 13.6 L 20.2 9 L 22.6 12.6 L 25 9.4 L 26.6 13.6 L 29 16.6 L 30.2 19.6 L 28.6 20.6 L 30.6 22 L 29 23.2 L 31 24.8 L 29.6 26 L 31.4 28 L 31.6 34 Z"
    />
    <path
      d="M 13 34 L 32 34 C 33 34 33.5 35 33.5 36 L 33.5 38.5 C 33.5 39.3 32.8 40 32 40 L 13 40 C 12.2 40 11.5 39.3 11.5 38.5 L 11.5 36 C 11.5 35 12 34 13 34 Z"
    />
    <path
      d="M 19 18.8 a 0.95 0.95 0 1 0 0 1.9 a 0.95 0.95 0 1 0 0 -1.9 z"
      fill="var(--piece-white-stroke, #2A2A2A)"
    />
  </g>
</svg>
`;

exports[`meridian set > undefined matches its snapshot 6`] = `
<svg
  aria-label="White pawn"
  height="100%"
  role="img"
  viewBox="0 0 45 45"
  width="100%"
>
  <g
    fill="var(--piece-white-fill, #FFFFFF)"
    stroke="var(--piece-white-stroke, #2A2A2A)"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.5"
  >
    <path
      d="M 22.5 16 a 3.5 3.5 0 1 0 0 7 a 3.5 3.5 0 1 0 0 -7 z"
    />
    <path
      d="M 18.8 23.2 L 26.2 23.2 L 25.4 25.6 L 19.6 25.6 Z"
    />
    <path
      d="M 19.8 25.6 C 19.8 28.8 17.4 30.8 16.4 34 L 28.6 34 C 27.6 30.8 25.2 28.8 25.2 25.6 Z"
    />
    <path
      d="M 15 34 L 30 34 C 31 34 31.5 35 31.5 36 L 31.5 38.5 C 31.5 39.3 30.8 40 30 40 L 15 40 C 14.2 40 13.5 39.3 13.5 38.5 L 13.5 36 C 13.5 35 14 34 15 34 Z"
    />
  </g>
</svg>
`;

exports[`meridian set > undefined matches its snapshot 7`] = `
<svg
  aria-label="Black king"
  height="100%"
  role="img"
  viewBox="0 0 45 45"
  width="100%"
>
  <g
    fill="var(--piece-black-fill, #2A2A2A)"
    stroke="var(--piece-black-stroke, #1A1A1A)"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.5"
  >
    <path
      d="M 21.3 2 L 23.7 2 L 23.7 4.6 L 26.3 4.6 L 26.3 7 L 23.7 7 L 23.7 10.4 L 21.3 10.4 L 21.3 7 L 18.7 7 L 18.7 4.6 L 21.3 4.6 Z"
    />
    <path
      d="M 22.5 10.4 C 26.2 11.4 28.8 13.6 29.4 16.4 L 15.6 16.4 C 16.2 13.6 18.8 11.4 22.5 10.4 Z"
    />
    <path
      d="M 14.4 16.4 L 30.6 16.4 L 29.6 19.8 L 15.4 19.8 Z"
    />
    <path
      d="M 16.6 19.8 C 16.6 25 11.6 28.8 10.6 33 L 34.4 33 C 33.4 28.8 28.4 25 28.4 19.8 Z"
    />
    <path
      d="M 11 33 L 34 33 C 35 33 35.5 34 35.5 35 L 35.5 38.5 C 35.5 39.3 34.8 40 34 40 L 11 40 C 10.2 40 9.5 39.3 9.5 38.5 L 9.5 35 C 9.5 34 10 33 11 33 Z"
    />
    <g
      fill="none"
      stroke="var(--piece-white-fill, #FFFFFF)"
      stroke-width="1.1"
    >
      <path
        d="M 21.6 7 L 23.4 7"
      />
      <path
        d="M 16.4 16.4 L 28.6 16.4"
      />
      <path
        d="M 15.6 19.8 L 29.4 19.8"
      />
      <path
        d="M 11.6 33 L 33.4 33"
      />
    </g>
  </g>
</svg>
`;

exports[`meridian set > undefined matches its snapshot 8`] = `
<svg
  aria-label="Black queen"
  height="100%"
  role="img"
  viewBox="0 0 45 45"
  width="100%"
>
  <g
    fill="var(--piece-black-fill, #2A2A2A)"
    stroke="var(--piece-black-stroke, #1A1A1A)"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.5"
  >
    <path
      d="M 12.6 8.2 C 12.6 7.3 13.3 6.6 14.2 6.6 C 15.1 6.6 15.8 7.3 15.8 8.2 C 15.8 9.1 15.1 9.8 14.2 9.8 C 13.3 9.8 12.6 9.1 12.6 8.2 Z"
    />
    <path
      d="M 16.7 6.6 C 16.7 5.7 17.4 5 18.3 5 C 19.2 5 19.9 5.7 19.9 6.6 C 19.9 7.5 19.2 8.2 18.3 8.2 C 17.4 8.2 16.7 7.5 16.7 6.6 Z"
    />
    <path
      d="M 20.9 5.6 C 20.9 4.7 21.6 4 22.5 4 C 23.4 4 24.1 4.7 24.1 5.6 C 24.1 6.5 23.4 7.2 22.5 7.2 C 21.6 7.2 20.9 6.5 20.9 5.6 Z"
    />
    <path
      d="M 25.1 6.6 C 25.1 5.7 25.8 5 26.7 5 C 27.6 5 28.3 5.7 28.3 6.6 C 28.3 7.5 27.6 8.2 26.7 8.2 C 25.8 8.2 25.1 7.5 25.1 6.6 Z"
    />
    <path
      d="M 29.2 8.2 C 29.2 7.3 29.9 6.6 30.8 6.6 C 31.7 6.6 32.4 7.3 32.4 8.2 C 32.4 9.1 31.7 9.8 30.8 9.8 C 29.9 9.8 29.2 9.1 29.2 8.2 Z"
    />
    <path
      d="M 14.2 9.8 L 16.4 18.4 L 18.3 8.2 L 20.6 18.4 L 22.5 7.2 L 24.4 18.4 L 26.7 8.2 L 28.6 18.4 L 30.8 9.8 L 33.5 18.4 L 11.5 18.4 Z"
    />
    <path
      d="M 11.5 18.4 L 33.5 18.4 L 32.4 21.6 L 12.6 21.6 Z"
    />
    <path
      d="M 14 21.6 C 14 26 11.6 29.2 10.6 33 L 34.4 33 C 33.4 29.2 31 26 31 21.6 Z"
    />
    <path
      d="M 11 33 L 34 33 C 35 33 35.5 34 35.5 35 L 35.5 38.5 C 35.5 39.3 34.8 40 34 40 L 11 40 C 10.2 40 9.5 39.3 9.5 38.5 L 9.5 35 C 9.5 34 10 33 11 33 Z"
    />
    <g
      fill="none"
      stroke="var(--piece-white-fill, #FFFFFF)"
      stroke-width="1.1"
    >
      <path
        d="M 12.4 18.4 L 32.6 18.4"
      />
      <path
        d="M 13.2 21.6 L 31.8 21.6"
      />
      <path
        d="M 11.6 33 L 33.4 33"
      />
    </g>
  </g>
</svg>
`;

exports[`meridian set > undefined matches its snapshot 9`] = `
<svg
  aria-label="Black rook"
  height="100%"
  role="img"
  viewBox="0 0 45 45"
  width="100%"
>
  <g
    fill="var(--piece-black-fill, #2A2A2A)"
    stroke="var(--piece-black-stroke, #1A1A1A)"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.5"
  >
    <path
      d="M 11.5 12 L 16.5 12 L 16.5 15.2 L 20 15.2 L 20 12 L 25 12 L 25 15.2 L 28.5 15.2 L 28.5 12 L 33.5 12 L 33.5 19 L 30.6 21.4 L 30.6 30.6 L 33.5 33 L 34.5 40 L 10.5 40 L 11.5 33 L 14.4 30.6 L 14.4 21.4 L 11.5 19 Z"
    />
    <g
      fill="none"
      stroke="var(--piece-white-fill, #FFFFFF)"
      stroke-width="1.1"
    >
      <path
        d="M 12.2 19 L 32.8 19"
      />
      <path
        d="M 12.2 33 L 32.8 33"
      />
    </g>
  </g>
</svg>
`;

exports[`meridian set > undefined matches its snapshot 10`] = `
<svg
  aria-label="Black bishop"
  height="100%"
  role="img"
  viewBox="0 0 45 45"
  width="100%"
>
  <g
    fill="var(--piece-black-fill, #2A2A2A)"
    stroke="var(--piece-black-stroke, #1A1A1A)"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.5"
  >
    <path
      d="M 22.5 7 a 1.7 1.7 0 1 0 0 3.4 a 1.7 1.7 0 1 0 0 -3.4 z"
    />
    <path
      d="M 22.5 10.4 C 26.6 12.6 28.9 17.4 28.6 22 L 16.4 22 C 16.1 17.4 18.4 12.6 22.5 10.4 Z"
    />
    <path
      d="M 15.6 22 L 29.4 22 L 28.7 24.6 L 16.3 24.6 Z"
    />
    <path
      d="M 18 24.6 C 18 28 15.8 30 14.6 33 L 30.4 33 C 29.2 30 27 28 27 24.6 Z"
    />
    <path
      d="M 13 33 L 32 33 C 33 33 33.5 34 33.5 35 L 33.5 38.5 C 33.5 39.3 32.8 40 32 40 L 13 40 C 12.2 40 11.5 39.3 11.5 38.5 L 11.5 35 C 11.5 34 12 33 13 33 Z"
    />
    <g
      fill="none"
      stroke="var(--piece-white-fill, #FFFFFF)"
      stroke-width="1.1"
    >
      <path
        d="M 20 13.8 L 25 18.8"
      />
      <path
        d="M 16.8 22 L 28.2 22"
      />
      <path
        d="M 16.6 24.6 L 28.4 24.6"
      />
      <path
        d="M 15.2 33 L 29.8 33"
      />
    </g>
  </g>
</svg>
`;

exports[`meridian set > undefined matches its snapshot 11`] = `
<svg
  aria-label="Black knight"
  height="100%"
  role="img"
  viewBox="0 0 45 45"
  width="100%"
>
  <g
    fill="var(--piece-black-fill, #2A2A2A)"
    stroke="var(--piece-black-stroke, #1A1A1A)"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.5"
  >
    <path
      d="M 15 34 C 14.2 30.6 14.2 27.8 16.4 24.6 L 13 24.8 L 11.3 23.8 L 11.5 20.6 L 15.2 19.6 L 17.6 18.6 L 19.6 16.2 L 20.4 13.6 L 20.2 9 L 22.6 12.6 L 25 9.4 L 26.6 13.6 L 29 16.6 L 30.2 19.6 L 28.6 20.6 L 30.6 22 L 29 23.2 L 31 24.8 L 29.6 26 L 31.4 28 L 31.6 34 Z"
    />
    <path
      d="M 13 34 L 32 34 C 33 34 33.5 35 33.5 36 L 33.5 38.5 C 33.5 39.3 32.8 40 32 40 L 13 40 C 12.2 40 11.5 39.3 11.5 38.5 L 11.5 36 C 11.5 35 12 34 13 34 Z"
    />
    <path
      d="M 15.4 34 L 30.8 34"
      fill="none"
      stroke="var(--piece-white-fill, #FFFFFF)"
      stroke-width="1.1"
    />
    <path
      d="M 19 18.8 a 0.95 0.95 0 1 0 0 1.9 a 0.95 0.95 0 1 0 0 -1.9 z"
      fill="var(--piece-white-fill, #FFFFFF)"
      stroke="none"
    />
  </g>
</svg>
`;

exports[`meridian set > undefined matches its snapshot 12`] = `
<svg
  aria-label="Black pawn"
  height="100%"
  role="img"
  viewBox="0 0 45 45"
  width="100%"
>
  <g
    fill="var(--piece-black-fill, #2A2A2A)"
    stroke="var(--piece-black-stroke, #1A1A1A)"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.5"
  >
    <path
      d="M 22.5 16 a 3.5 3.5 0 1 0 0 7 a 3.5 3.5 0 1 0 0 -7 z"
    />
    <path
      d="M 18.8 23.2 L 26.2 23.2 L 25.4 25.6 L 19.6 25.6 Z"
    />
    <path
      d="M 19.8 25.6 C 19.8 28.8 17.4 30.8 16.4 34 L 28.6 34 C 27.6 30.8 25.2 28.8 25.2 25.6 Z"
    />
    <path
      d="M 15 34 L 30 34 C 31 34 31.5 35 31.5 36 L 31.5 38.5 C 31.5 39.3 30.8 40 30 40 L 15 40 C 14.2 40 13.5 39.3 13.5 38.5 L 13.5 36 C 13.5 35 14 34 15 34 Z"
    />
    <g
      fill="none"
      stroke="var(--piece-white-fill, #FFFFFF)"
      stroke-width="1.1"
    >
      <path
        d="M 19.1 23.4 L 25.9 23.4"
      />
      <path
        d="M 19.7 25.6 L 25.3 25.6"
      />
      <path
        d="M 16.6 34 L 28.4 34"
      />
    </g>
  </g>
</svg>
`;
